apps/shiplog/src/ingest/snapshots/shiplog__ingest__linear__tests__snapshot_linear_issue_to_event_minimal.snap
---
source: apps/shiplog/src/ingest/linear.rs
expression: events
---
- id: 2894f4159959a3c007dacf6be132fad4833d4ba5092418c077afce58ce3c38d0
  kind: Manual
  occurred_at: "2025-01-05T11:00:00Z"
  actor:
    login: bob
    id: ~
  repo:
    full_name: linear/unknown
    html_url: "https://linear.app"
    visibility: Private
  payload:
    type: Manual
    data:
      event_type: Other
      title: Fix button alignment
      description: ~
      started_at: 2025-01-05
      ended_at: ~
      impact: "Issue: FE-45"
  tags: []
  links:
    - label: Linear Issue
      url: "https://linear.app/issue/FE-45"
  source:
    system: linear
    url: "https://linear.app/issue/FE-45"
    opaque_id: issue-uuid-002
